--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.url=jdbc:mysql://root:password1@127.0.0.1:3306/employees
 spring.main.banner-mode=off
 
 spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
