--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,2 @@
-spring.application.name=employeemanager
-spring.datasource.url=jdbc:mysql://root:password1@127.0.0.1:3306/employees
 spring.main.banner-mode=off
-spring.jpa.hibernate.ddl-auto=update
+spring.profiles.active=test
